<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sugar_fragment_cl"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/sugar_fragment_sugar_quantity_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/sugar_fragment_no_sugar_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/sugar_fragment_no_sugar" />

        <RadioButton
            android:id="@+id/sugar_fragment_medium_sugar_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sugar_fragment_medium_sugar"
            android:textColorLink="#6F6E6E" />

        <RadioButton
            android:id="@+id/sugar_fragment_sweet_sugar_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sugar_fragment_sweet_sugar" />

    </RadioGroup>


    <CheckBox
        android:id="@+id/sugar_fragment_saccharin_sugar_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sugar_fragment_saccharin"
        app:layout_constraintEnd_toStartOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spirits_fragment_product_name_label_tv" />

    <CheckBox
        android:id="@+id/sugar_fragment_brown_sugar_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar_fragment_brown_sugar"
        app:layout_constraintStart_toStartOf="@+id/sugar_fragment_saccharin_sugar_cb"
        app:layout_constraintTop_toBottomOf="@+id/sugar_fragment_saccharin_sugar_cb" />


    <CheckBox
        android:id="@+id/sugar_fragment_decaffeine_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar_fragment_decaffeine"
        app:layout_constraintStart_toStartOf="@+id/sugar_fragment_brown_sugar_cb"
        app:layout_constraintTop_toBottomOf="@+id/sugar_fragment_brown_sugar_cb" />

    <CheckBox
        android:id="@+id/sugar_fragment_milk_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar_fragment_milk"
        app:layout_constraintStart_toStartOf="@+id/sugar_fragment_decaffeine_cb"
        app:layout_constraintTop_toBottomOf="@+id/sugar_fragment_decaffeine_cb" />

    <TextView
        android:id="@+id/sugar_fragment_sugar_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sugar_fragment_sugar_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sugar_fragment_sugar_quantity_rg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider2" />

    <TextView
        android:id="@+id/spirits_fragment_product_name_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sugar_fragment_extras_label"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sugar_fragment_sugar_label_tv" />

    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>