<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="10">


    <TextView
        android:id="@+id/ice_cream_fragment_flavour_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        tools:text="Γεύση"
        />

    <Button
        android:id="@+id/ice_cream_fragment_decrease_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/minus_sign" />

    <TextView
        android:id="@+id/ice_cream_fragment_quantity_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/zero_value"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/ice_cream_fragment_increase_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/increment_sign" />


</LinearLayout>