<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="20">


    <Button
        android:id="@+id/comment_fragment_decrease_btn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/minus_sign"
        app:layout_constraintEnd_toStartOf="@+id/comment_fragment_quantity_tv_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comment_fragment_quantity_tv_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/comment_fragment_increase_btn"
        app:layout_constraintEnd_toStartOf="@+id/comment_fragment_increase_btn"
        app:layout_constraintTop_toTopOf="@+id/comment_fragment_increase_btn" />

    <Button
        android:id="@+id/comment_fragment_increase_btn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:text="@string/increment_sign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/comment_fragment_product_comment_et"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="17"
        android:ems="10"
        android:hint="@string/comment_fragment_comment_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/comment_fragment_add_to_basket_btn"
        app:layout_constraintTop_toBottomOf="@+id/comment_fragment_decrease_btn"
        tools:layout_editor_absoluteX="0dp"
        tools:text="Comment..." />


    <Button
        android:id="@+id/comment_fragment_add_to_basket_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/comment_fragment_add_to_basket_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/comment_fragment_cancel_btn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:text="@string/comment_fragment_cancel_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view2" />

    <View
        android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>