<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/basket_items_fragment_table_name_tv"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="TextView" />

    </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/basket_items_fragment_tables_order_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/basket_items_fragment_price_sum_ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:listItem="@layout/table_order_fragment_order_list_item" />

    <LinearLayout
        android:id="@+id/basket_items_fragment_price_sum_ll"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/basket_items_fragment_buttons_ll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:weightSum="10">

        <TextView
            android:id="@+id/basket_items_fragment_sum_price_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom|end"
            android:text="@string/table_order_fragment_sum_price"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="7"/>

        <TextView
            android:id="@+id/basket_items_fragment_sum_price_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="bottom|end"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="379dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="Σύνολο"
            android:maxLines="1"
            android:layout_weight="3"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/basket_items_fragment_buttons_ll"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <Button
            android:id="@+id/basket_items_fragment_add_order_item_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/table_order_fragment_add_order_item_string"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/basket_items_fragment_print_order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/basket_items_fragment_print"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>